# womolin-display

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  README.md  config.json  hud.sll  lv_conf.h  lv_conf.h.raspberry  lv_drv_conf.h  lv_drv_conf.h.raspberry  main.cpp  main.h  posix_sockets.h
exported/: CMakeLists.txt  Makefile  Makefile.raspberry  Makefile.simulator  config.json  lv_conf.h  lv_conf.h.raspberry  lv_conf.h.simulator  lv_drv_conf.h  lv_drv_conf.h.raspberry  main.c  main.cpp  main.h
exported/hud/: .project
exported/libs/: CMakeLists.txt
exported/src/: dispatcher.c  main.c  main.h  mqtt_activity.c  mqtt_activity.h
exported/systemd/: rv-hud.service
exported/ui/: CMakeLists.txt  ui.c  ui.h  ui_events.c  ui_helpers.c  ui_helpers.h  ui_img_icon_battery_inactive_png.c  ui_img_icon_battery_png.c  ui_img_icon_close_png.c  ui_img_icon_gas_inactive_png.c  ui_img_icon_settings_png.c  ui_img_icon_temperature_png.c  ui_img_icon_water_content_clean_png.c  ui_img_icon_water_content_png.c  ui_img_icon_water_inactive_png.c  ui_img_icon_weather_active_png.c  ui_img_icon_weather_png.c
libs/bcm2835/: CMakeLists.txt
libs/sysfs_gpio/: CMakeLists.txt  sysfs_gpio.cpp  sysfs_gpio.h
squareline/: hud.sll  hud.spj  hud_events.py
squareline/assets/: ui_font_rubik_light_40.c
squareline_gui_settings/: hud.spj
squareline_gui_settings/assets/: ui_font_rubik_bold_53.fcfg
squareline_gui_water/: hud.sll  hud.spj
squareline_gui_water/assets/: ui_font_rubik_SemiBold_22.c  ui_font_rubik_bold_53.c  ui_font_rubik_light_40.fcfg
src/: CMakeLists.txt  lv_conf.h  lv_conf.h.raspberry  lv_conf.h.simulator  lv_drv_conf.h.raspberry  lv_drv_conf.h.simulator  main.cpp  main.h
src/ui/: CMakeLists.txt  ui.c  ui.h  ui_font_rubik_light_18.c  ui_img_icon_battery_large_png.c  ui_img_icon_close_png.c  ui_img_icon_gas_png.c  ui_img_icon_temperature_png.c  ui_img_icon_water_content_dirty_png.c  ui_img_icon_water_png.c
systemd/: rv-hud.service  womolin-display.service
ui/: ui.c  ui.h  ui_helpers.h  ui_img_icon_battery_png.c  ui_img_icon_gas_large_png.c  ui_img_icon_settings_png.c
ui_generator/squareline_gui_settings/: hud.sll
ui_generator/squareline_gui_settings/assets/: ui_font_rubik_SemiBold_22.fcfg
ui_generator/squareline_gui_water/: hud.sll  hud.spj
ui_generator/squareline_gui_water/assets/: ui_font_rubik_light_18.fcfg
